--- a/template/article_list.html.twig
+++ b/template/article_list.html.twig
@@ -1,9 +1,9 @@
 {% extends "base.html.twig" %}
 
 {%  block head %}
-
+    <title>Bonjour!</title>
 {% endblock %}
 
 {%  block body %}
-    <h1>Homepage</h1>
+    <h1>Article Liste</h1>
 {% endblock %}
