--- a/template/article_list.html.twig
+++ b/template/article_list.html.twig
@@ -5,5 +5,23 @@
 {% endblock %}
 
 {%  block body %}
-    <h1>Article Liste</h1>
+
+  <div class="container">
+    <div style="margin-bottom: 100px;" class="row">
+
+        {% for article in article %}
+            <div style="margin-top: 44px; " class="col-md-4 card-deck">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title text-center"><a href="article/{{ article.id }}">{{ article.titre }}</a></h5>
+                        <p class="card-text">{{ article.chapo }}</p>
+                        <p class="card-text"><small class="text-muted">Dernière mise à jour {{ article.update }} </small></p>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+
+    </div>
+  </div>
+
 {% endblock %}
