--- a/template/article.html.twig
+++ b/template/article.html.twig
@@ -76,7 +76,28 @@
     {% endfor %}
 
         <div style="margin-bottom: 150px;">
-
+            <div class="card">
+                <div class="card-header">
+                    Laisser un commentaire
+                </div>
+                <div class="card-body">
+                    <form action="" method="POST">
+                        <div class="form-group">
+                            <label for="auteur">Auteur</label>
+                            <input type="text" class="form-control" name="auteur" id="auteur" placeholder="Auteur" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="contenu">Contenu</label>
+                            <textarea class="form-control" name="contenu" id="contenu" aria-describedby="contenu" rows="3" required></textarea>
+                            <small id="contenu" class="form-text text-muted">
+                                Le contenu ne peut depasser 900 caracterer.
+                            </small>
+                        </div>
+                        <input type="hidden" name="formToken" value="{{ formToken }}">
+                        <button type="submit" class="btn btn-primary float-right">Envoyer</button>
+                    </form>
+                </div>
+            </div>
         </div>
 
 
