--- a/template/article_list.html.twig
+++ b/template/article_list.html.twig
@@ -1,7 +1,9 @@
 {% extends "base.html.twig" %}
 
 {%  block head %}
-    <title>Bonjour!</title>
+    <title>Liste article</title>
+    <meta name="description" content="">
+    <link rel="canonical" href="" />
 {% endblock %}
 
 {%  block body %}
