--- a/template/homepage.html.twig
+++ b/template/homepage.html.twig
@@ -1,7 +1,9 @@
 {% extends "base.html.twig" %}
 
 {%  block head %}
-    <title>Bonjour!</title>
+    <title>Blog</title>
+    <meta name="description" content="">
+    <link rel="canonical" href="" />
 {% endblock %}
 
 {%  block body %}
@@ -26,8 +28,6 @@
             </div>
 
         </div>
-
-
 
         <div class="container">
          <div class="col-md-12 mb-4">
