--- a/template/homepage.html.twig
+++ b/template/homepage.html.twig
@@ -35,7 +35,7 @@
                 <div class="card-body">
 
                     {% if session.erreur == true %}
-                        <p style="margin-top: 10px;" class="{{ session.erreur.type }} alert text-center">{{ session.erreur.content }} <i class="fa fa-spinner fa-spin" style="font-size:20px"></i>  </p>
+                        <p style="margin-top: 10px;" class="{{ session.erreur.type }} alert text-center"><strong>{{ session.erreur.content }}</strong> <i class="fa fa-spinner fa-spin" style="font-size:20px"></i>  </p>
                     {% endif %}
 
                     {{ form_start(form) }}
